--- a/Paper/introduction.tex
+++ b/Paper/introduction.tex
@@ -3,6 +3,6 @@ Driven by Moore's Law, advances in processor design have delivered improvements 
 
 Hardware manufacturers are already prioritising energy efficiency in their processor designs~\cite{kurd:2014aa}. In turn, some groups have suggested that software modifications will be required to fully exploit the energy efficiency improvements of modern processors~\cite{shao:2013aa}. This is analogous to the current practice of tuning code for reduced runtime by exploiting specific processor features like vectorisation or the cache hierarchy. These groups expect code optimisation to be applied to minimizing power consumption as well as run time in the future. \golden
 
-A body of research is accumulating as the search for techniques to identify and reason about software power optimizations continues. This paper is intended to provide a critical review of the field; identifying the opportunities present and highlighting the amount of benefit which can be realistically expected of them. We first review the prior art in this field and identify overall trends in the approaches taken. Secondly we undertake an empirical investigation, applying some of the proposed techniques in order to understand how they may benefit developers in practice. \golden
+A body of research is accumulating as the search for techniques to identify and reason about software power optimizations continues. This paper is intended to provide a critical review of the field; identifying the opportunities present and highlighting the amount of benefit which can be realistically expected of them. We first review the prior art in this area and identify overall trends in the approaches taken. Secondly we undertake an empirical investigation, applying some of the proposed techniques in order to understand how they may benefit developers in practice. \golden
 
-The remainder of this paper is organized as follows: Section~\ref{sec:background} details the problem background and introduces some core concepts and metrics. Section~\ref{sec:prior} gives an overview of prior research carried out in this area. Section~\ref{sec:profiling} then details our empirical investigations into power profiling using the techniques described in Section~\ref{sec:prior}. We provide the results of this investigation in Section~\ref{sec:results} before presenting our conclusions in Section~\ref{sec:conclusion}. \golden
+The remainder of this paper is organized as follows: Section~\ref{sec:background} details the problem background and introduces some core concepts and metrics. Section~\ref{sec:prior} gives an overview of prior research carried out on this topic. Section~\ref{sec:profiling} then details our empirical investigations into power profiling and our appraisal of the techniques described in Section~\ref{sec:prior}. We provide the results of this investigation in Section~\ref{sec:results} before presenting our conclusions in Section~\ref{sec:conclusion}. \golden
