--- a/Paper/library.bib
+++ b/Paper/library.bib
@@ -1,12 +1,63 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Stephen Roberts at 2014-11-11 01:11:36 +0000 
+%% Created for Stephen Roberts at 2014-11-11 11:33:25 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{esmaeilzadeh:2011aa,
+	Acmid = {2000108},
+	Address = {New York, NY, USA},
+	Author = {Esmaeilzadeh, Hadi and Blem, Emily and St. Amant, Renee and Sankaralingam, Karthikeyan and Burger, Doug},
+	Booktitle = {Proceedings of the 38th Annual International Symposium on Computer Architecture},
+	Date-Added = {2014-11-11 11:33:12 +0000},
+	Date-Modified = {2014-11-11 11:33:14 +0000},
+	Doi = {10.1145/2000064.2000108},
+	Isbn = {978-1-4503-0472-6},
+	Keywords = {dark silicon, modeling, multicore, power, technology scaling},
+	Location = {San Jose, California, USA},
+	Numpages = {12},
+	Pages = {365--376},
+	Publisher = {ACM},
+	Series = {ISCA '11},
+	Title = {Dark Silicon and the End of Multicore Scaling},
+	Url = {http://doi.acm.org/10.1145/2000064.2000108},
+	Year = {2011},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2000064.2000108},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2000064.2000108}}
+
+@article{jouppi:1994aa,
+	Author = {Jouppi, N.P. and Boyle, P. and Fitch, J.S.},
+	Date-Added = {2014-11-11 10:13:57 +0000},
+	Date-Modified = {2014-11-11 10:13:59 +0000},
+	Doi = {10.1109/40.272837},
+	Issn = {0272-1732},
+	Journal = {Micro, IEEE},
+	Keywords = {bipolar integrated circuits;computer testing;emitter-coupled logic;integrated circuit testing;microprocessor chips;packaging;115 W;300 MHz;CAD tools;ECL microprocessor;VLSI;bipolar technology;clock rates;high-performance chip interfaces;high-power microprocessors;packaging;packaging techniques;testing;CMOS process;CMOS technology;Circuit testing;Clocks;Design automation;Microprocessors;Packaging;Process design;Prototypes;Very large scale integration},
+	Month = {April},
+	Number = {2},
+	Pages = {50-58},
+	Title = {Designing, packaging, and testing a 300-MHz, 115 W ECL microprocessor},
+	Volume = {14},
+	Year = {1994},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/40.272837}}
+
+@inproceedings{gupta:2012aa,
+	Address = {Boston, MA},
+	Author = {Vishal Gupta and Paul Brett and David Koufaty and Dheeraj Reddy and Scott Hahn and Karsten Schwan and Ganapati Srinivasa},
+	Booktitle = {Presented as part of the 2012 USENIX Annual Technical Conference (USENIX ATC 12)},
+	Date-Added = {2014-11-11 09:30:12 +0000},
+	Date-Modified = {2014-11-11 09:30:13 +0000},
+	Isbn = {978-931971-93-5},
+	Pages = {367--372},
+	Publisher = {USENIX},
+	Title = {The Forgotten {\textquoteleft}Uncore{\textquoteright}: On the Energy-Efficiency of Heterogeneous Cores},
+	Url = {https://www.usenix.org/conference/atc12/technical-sessions/presentation/gupta},
+	Year = {2012},
+	Bdsk-Url-1 = {https://www.usenix.org/conference/atc12/technical-sessions/presentation/gupta}}
 
 @inproceedings{chu:1999aa,
 	Author = {Chu, R.C. and Simons, R.E. and Chrysler, G.M.},
