--- a/Paper/prior.tex
+++ b/Paper/prior.tex
@@ -13,3 +13,6 @@ We present a taxonomy of prior art in this field
 \item Modelling taxonomy
 \end{itemize}
 }
+
+
+\todo{Make sure to make the point that the accuracy quoted for models hovers around the same amount and is usually quoted as a simple average. There are several problems with such a figure. The simplest issue is that if a model can both over- and under-estimate, a low average error can be observed even when individual predictions are way off. If we give the authors the benefit of the doubt and assume they are reporting mean absolute error values. Even then, this methodology is somewhat flawed. To state a model yields an average error of 5\% does not necessarily display how good a model is. The nature of power, with both static and dynamic components along with known bounds means that reasonable guesses to power draw can be made a-priori. Any model constructed only has merit in as much as it beats these naive predictions.} 
