--- a/Paper/shadow.tex
+++ b/Paper/shadow.tex
@@ -38,3 +38,51 @@ The end of Dennard scaling is expected to shrink the range of DVFS in future nod
 \reword{Dennard scaling, which roughly, that as transistors get smaller their power density stays constant, so that the power use stays in proportion with area: both voltage and current scale (downward) with length \todo{cite Dennard's paper}}
 
 \fragment{When viewed in this context, all event-driven power models are simply linking performance events back to their associated activity costs/factors}
+
+
+\reword{The uncore is a collection of components of a processor
+not in the core but essential for core performance. The
+CPU core contains components involved in executing in-
+structions, including execution units, L1 and L2 cache,
+branch prediction logic, etc. Uncore functions include
+the last level cache (LLC), integrated memory controllers
+(IMC), on-chip interconnect (OCI), power control logic
+(PWR), etc. as shown in Figure 1. With growing cache
+sizes and the integration of various SoC components on
+CPU die, the uncore is becoming an increasingly impor-
+tant contributor to total SoC power.}
+
+
+
+
+
+\todo{shit on this: Energy Measurement and Prediction for Multi-threaded Programs}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
