--- a/Paper/library.bib
+++ b/Paper/library.bib
@@ -1,12 +1,48 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Stephen Roberts at 2014-11-11 11:33:25 +0000 
+%% Created for Stephen Roberts at 2014-11-12 22:30:23 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{jan:2009aa,
+	Author = {Jan, C-H and Agostinelli, M and Buehler, M and Chen, Z-P and Choi, S-J and Curello, G and Deshpande, H and Gannavaram, S and Hafez, W and Jalan, U and others},
+	Booktitle = {Electron Devices Meeting (IEDM), 2009 IEEE International},
+	Date-Added = {2014-11-12 22:30:01 +0000},
+	Date-Modified = {2014-11-12 22:30:02 +0000},
+	Organization = {IEEE},
+	Pages = {1--4},
+	Title = {A 32nm SoC platform technology with 2 nd generation high-k/metal gate transistors optimized for ultra low power, high performance, and high density product applications},
+	Year = {2009}}
+
+@article{gonzales:1995aa,
+	Author = {Ricardo Gonzales and Mark Horowitz},
+	Date-Added = {2014-11-12 20:59:50 +0000},
+	Date-Modified = {2014-11-12 20:59:52 +0000},
+	Journal = {IEEE Journal of Solid State Circuits},
+	Pages = {1277--1284},
+	Title = {Energy Dissipation in general Purpose Processors},
+	Volume = {31},
+	Year = {1995}}
+
+@article{brooks:2000aa,
+	Author = {Brooks, D.M. and Bose, P. and Schuster, S.E. and Jacobson, H. and Kudva, P.N. and Buyuktosunoglu, A. and Wellman, J.-D. and Zyuban, V. and Gupta, M. and Cook, P.W.},
+	Date-Added = {2014-11-11 19:35:19 +0000},
+	Date-Modified = {2014-11-11 19:35:19 +0000},
+	Doi = {10.1109/40.888701},
+	Issn = {0272-1732},
+	Journal = {Micro, IEEE},
+	Keywords = {logic design;microprocessor chips;clock-gating;dynamic adaptation;energy-enabled performance simulators;next-generation microprocessors;power consumption estimation;power-aware microarchitecture;Clocks;Costs;Energy consumption;Frequency;Microarchitecture;Microprocessors;Power dissipation;Process design;Switching loss;Voltage},
+	Month = {Nov},
+	Number = {6},
+	Pages = {26-44},
+	Title = {Power-aware microarchitecture: design and modeling challenges for next-generation microprocessors},
+	Volume = {20},
+	Year = {2000},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/40.888701}}
 
 @inproceedings{esmaeilzadeh:2011aa,
 	Acmid = {2000108},
