--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -9,15 +9,16 @@
 \usepackage{amsfonts}
 \usepackage{mathtools}
 \usepackage{booktabs}
+\usepackage[justification=centering]{caption}
 
 \title{Software Optimizations for Reduced Energy Consumption: A Feasibility Study}                            
-\author{\IEEEauthorblockN{Stephen I. Roberts\\ and Stephen Jarvis}
-\IEEEauthorblockA{Department of Computer Science\\
-The University of Warwick}
+\author{\IEEEauthorblockN{Stephen I. Roberts and Stephen Jarvis} \\
+\IEEEauthorblockA{Department of Computer Science,\\
+The University of Warwick}\\
 \and 
-\IEEEauthorblockN{Chris January\\and Jonathan Byrd}
-\IEEEauthorblockA{Allinea Software\\TODO}}                                                            
-\date{}
+\IEEEauthorblockN{Chris January and Jonathan Byrd} \\
+\IEEEauthorblockA{Allinea Software}}                                                            
+
 \hyphenation{scaling}
 
 \newcommand{\golden}{}
