--- a/Paper/prior.tex
+++ b/Paper/prior.tex
@@ -1,8 +1,33 @@
 \section{Review of Prior Art}
 \label{sec:prior}
 
-Prior art has by and large focussed on power modelling.
-We present a taxonomy of prior art in this field
+In this section we detail work which attempts to assess the impacts of software on power consumption. Needless to say this work would form the basis of any attempt at software-level power optimization and as such warrants our scrutiny. A wealth of material also exists on architecture-level power optimizations, however this is outside the scope of our study.
+
+\todo{To be able to optimize you need to be able to find}
+
+\todo{taxonomy}
+
+\begin{table}[ht]
+  \begin{tabular}{|c|c|c|c|}
+    \cline{3-4}
+    \multicolumn{2}{c|}{} & \multicolumn{2}{c|} {Intrinsic Energy Characteristics} \\ \cline{3-4}
+    
+    \multicolumn{2}{c|}{} & Architecture Level & Instruction Level \\ \hline
+    
+      \multirow{6}{*}{\parbox[t]{1.4cm}{Activity\\Factor}} & \multirow{2}{*}{Simulator/Profiler} & Y & Z \\ \cline{3-4}
+                                    & & Y & Z \\ \cline{2-4}
+                                    & \multirow{2}{*}{Performance Counters} & Y & Z \\ \cline{3-4}
+                                    & & Y & Z \\ \cline{2-4}
+                                    & \multirow{2}{*}{Analytical Performance Model} & Y & Z \\ \cline{3-4}
+                                    & & Y & Z \\ \hline
+
+  \end{tabular}
+  \caption{Energy Modelling Taxonomy}
+  \label{table:taxonomy}
+\end{table}
+
+
+\todo{tear this apart: Energy Measurement and Prediction for Multi-threaded Programs}
 
 
 \todo{
